# stdext

./: .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
include/stdext/: function.h  generator.h  stream.h  string.h  unicode.h
include/stdext/_impl/: config.h  function.inl
src/: stream.cpp
test/: CMakeLists.txt
test/src/: consumer.cpp  flags.cpp  function.cpp  generator.cpp  iterator.cpp  multi.cpp  optional.cpp  preprocessor.cpp  scope_guard.cpp  span.cpp  stream.cpp  utf.cpp  utility.cpp
